(4.2.7p40) 2010/07/12 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1395] ease ntpdate elimination with ntpd -w/--wait-sync
* [Bug 1396] allow servers on ntpd command line like ntpdate
(4.2.7p39) 2010/07/09 Released by Harlan Stenn <stenn@ntp.org>
* Fix typo in driver28.html.
* [Bug 1581] from 4.2.6p2: size_t printf format string mismatches, IRIG
  string buffers undersized.  Mostly backported from earlier ntp-dev
  fixes by Jürgen Perlinger.
(4.2.7p38) 2010/06/20 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1570] backported to 4.2.6p2-RC7.
* [Bug 1575] from 4.2.6p2-RC7: use 'snprintf' with LIB_BUFLENGTH in
  inttoa.c, tvtoa.c and utvtoa.c
* [Bug 1576] backported to 4.2.6p2-RC7.
* Typo fix in a comment in ntp_proto.c.
(4.2.7p37) 2010/06/19 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1576] sys/sysctl.h depends on sys/param.h on OpenBSD.
(4.2.7p36) 2010/06/15 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1560] Initial support for orphanwait, from Dave Mills.
* clock_filter()/reachability fixes from Dave Mills.
(4.2.7p35) 2010/06/12 Released by Harlan Stenn <stenn@ntp.org>
* Rewrite of multiprecision macros in 'ntp_fp.h' from J. Perlinger
  <perlinger@ntp.org>
* [Bug 715] from 4.2.6p2-RC6: libisc Linux IPv6 interface iteration
  drops multicast flags.
(4.2.7p34) 2010/06/05 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1570] serial clock drivers get outdated input from kernel tty
  line buffer after startup
(4.2.7p33) 2010/06/04 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1561] from 4.2.6p2-RC5: ntpq, ntpdc "passwd" prompts for MD5
  password w/SHA1.
* [Bug 1565] from 4.2.6p2-RC5: sntp/crypto.c compile fails on MacOS over
  vsnprintf().
* from 4.2.6p2-RC5: Windows port: do not exit in
  ntp_timestamp_from_counter() without first logging the reason.
(4.2.7p32) 2010/05/19 Released by Harlan Stenn <stenn@ntp.org>
* Copyright file cleanup from Dave Mills.
* [Bug 1555] from 4.2.6p2-RC4: sntp illegal C (mixed code and
  declarations).