@@ -1,3 +1,4 @@
+* orphanwait documentation updates.
 (4.2.7p40) 2010/07/12 Released by Harlan Stenn <stenn@ntp.org>
 * [Bug 1395] ease ntpdate elimination with ntpd -w/--wait-sync
 * [Bug 1396] allow servers on ntpd command line like ntpdate
